--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "dev": "npm run start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -27,5 +28,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "customize-cra": "^0.6.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "prop-types": "^15.7.2",
+    "react-app-rewired": "^2.1.3",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^1.0.0",
+    "styled-components": "^4.4.0"
   }
 }
