--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hot-loader/react-dom": "^16.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
@@ -31,11 +32,14 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
+    "antd": "^3.23.4",
+    "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.6.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "prop-types": "^15.7.2",
     "react-app-rewired": "^2.1.3",
+    "react-hot-loader": "^4.12.14",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
