--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "antd": "^3.23.4",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.6.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "md5": "^2.2.1",
     "prop-types": "^15.7.2",
+    "qs": "^6.9.0",
     "react-app-rewired": "^2.1.3",
     "react-hot-loader": "^4.12.14",
     "react-redux": "^7.1.1",
